deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baladengale
  labels:
    app.kubernetes.io/part-of: baladengale-site
